--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html lang="="en">
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>Private Chat Room</title>
   <style>
     body { font-family: sans-serif; background: #f2f2f2; padding: 2rem; }
@@ -70,7 +70,11 @@
       fetch(`/login`, {
         method: 'POST',
         headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify({ key, username: user, password: pass })
+        body: JSON.stringify({
+          key,
+          username: user,
+          password: pass
+        })
       })
         .then(res => res.json())
         .then(data => {
