--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8">
   <title>Private Chat Room</title>
   <style>
     body { font-family: sans-serif; background: #f2f2f2; padding: 2rem; }
